[project]
name = 'MerakiVPNStatus'
version = '1.0.01'
description = 'CLI utility that retrireves the SNMP settings for one more Meraki Organizations and (optionally) SNMP settings for networks in given organizations.'
readme = 'README.md'
requires-python = '>=3.8'
authors = [
    { name = 'Zach Brewer'},
]

keywords = [
    'meraki', 'python', 'automation', 'dashboard-api', 'meraki-api' 
]

license = {file = 'LICENSE.md'}
dependencies = [
    'meraki>=1.46.0',
    'tqdm>=4.66.4',
    'click>=48.1.7
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    'Jinja2>=3.1.3',
    'yapf >=0.40.2',
]

[project.urls]
repository = 'https://github.com/zabrewer/MerakiSNMP'
changelog = 'https://github.com/zabrewer/MerakiSNMP/blob/main/CHANGELOG.md'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['merakiasync', 'merakiasync.api', 'merakiasync.asynctasks']

[project.scripts]
merakisnmp = "merakisnmp.cli:snmp_settings"
